[package]
name = "akt"
version = "0.1.0"
authors = [
  "Artyom Kozhemiakin <xenus.t@gmail.com>"
]

edition = "2021"
license = "MIT"
description = """
An actors library for Rust and Tokio
designed to work with async / await message handlers out of the box.
"""
readme = "README.md"
repository = "https://github.com/akozhemiakin/akt"
homepage = "https://github.com/akozhemiakin/akt"
keywords = ["actor", "futures", "actix", "async", "tokio"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
async-trait = "0.1.58"

[dev-dependencies]
thiserror = "1.0.38"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }